kubernetes semi working